FIX: (WEB) - Melhora a visibilidade do painel e do sidebar removendo o componente de header!

--- a/web/src/app/portal/layout/painel/painel.scss
+++ b/web/src/app/portal/layout/painel/painel.scss
@@ -7,11 +7,12 @@
 .main-content {
   display: flex;
   flex: 1; // ocupa o resto da tela
+  overflow: hidden;
 }
 
 
 .content {
   flex: 1;
   padding: 1.5rem;
-  overflow-y: auto;
+  overflow: auto;
 }
