--- a/web/src/app/portal/layout/sidebar/sidebar.scss
+++ b/web/src/app/portal/layout/sidebar/sidebar.scss
@@ -1,36 +1,147 @@
+@use "../../../../variables" as *;
 
 .sidebar {
-  width: 220px;
-  background: #f8f9fa;
-  border-right: 1px solid #ddd;
+  width: 320px;
+  background: #303030;
+  border-right: 1px solid $white;
   padding: 1rem;
+  height: 100%;
+  color: $white;
+  overflow:hidden;
 
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  .nav-header {
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-    li {
-      margin-bottom: 10px;
+    .close-sidebar {
       cursor: pointer;
+    }
+  }
 
-      a {
-        display: block;
-        padding: 8px 12px;
-        border-radius: 6px;
-        text-decoration: none;
-        color: #333;
+  .nav-search {
+    color: #ddd;
 
-        &:hover {
-          background-color: #e9ecef;
+    .input-group-text {
+      border: 2px solid #ddd;
+      background-color: #303030;
+      color: #fff;
+      font-size: 1.2rem;
+
+    }
+    .form-control {
+      background-color: #303030;
+      border: 2px solid #ddd;
+      box-shadow: none;
+      color: #fff;
+      border-left: none;
+
+      &::placeholder {
+          color: #ddd;
+          opacity: 0.7;
+      }
+    }
+  }
+
+  .navbar {
+    height: 400px;
+    align-items: start;
+    ul {
+      width: 100%;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+
+      li {
+        cursor: pointer;
+
+        a {
+          display: block;
+          padding: 8px 12px;
+          border-radius: 6px;
+          text-decoration: none;
+          color: $white;
+          font-weight: bold;
+
+          &:hover {
+            background-color: $second;
+            color: $primary;
+          }
+
+          &.active {
+            background-color: $primary;
+            color: $second;
+            font-weight: 500;
+          }
         }
+        .dropdown-menu {
+          background-color: $bg-dark !important;
+          border: none !important;
+          box-shadow: none !important;
 
-        &.active {
-          background-color: #0d6efd; // azul bootstrap
-          color: #fff;
-          font-weight: 500;
+          .dropdown-item {
+            background-color: $bg-dark !important;
+            color: $white;
+            border-bottom: 1px solid #dddddda5;
+              &:hover {
+              background-color: $second;
+              color: $primary;
+            }
+          }
         }
       }
     }
   }
+  .nav-config {
+    height: 220px;
+
+    .config-link {
+      padding: 15px 0;
+      display: flex;
+      justify-content: space-between;
+    }
+    .config-profile {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .profile-data {
+        display: flex;
+        align-items: center;
+        width: 80%;
+        gap: 0.75rem;
+        img {
+          border-radius: 50%;
+        }
+        h5 {
+          margin: 0;
+          font-size: 1rem;
+          font-weight: 600;
+        }
+        p {
+          margin: 0;
+          font-size: 0.85rem;
+          color: #6c757d;
+        }
+
+        div.texts {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+
+    }
+  }
+  .nav-footer {
+    .btn-degrade {
+      width: 100%;
+      background: linear-gradient(135deg, #95d566, #63bfc1);
+      border-radius: 5px;
+      padding: 10px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: $bg-dark;
+    }
+  }
+
 }
